# sffs

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
.github/workflows/: test.yml
benchmark/: CMakeLists.txt  container_bm.cpp  sffs_memory.cpp
cmake/: GoogleBenchmark.cmake  googletest.cmake
include/: bptree.h  bptree_container.h  btree.h  btree_container.h  gn_container.h  ldc_utils.h  maxsize_vector.h  rbtree.h  rbtree_container.h  sffs.h  sffs_all.h  unarray.h
test/: CMakeLists.txt  bptree_algo.cpp  bptree_container.cpp  bptree_container_basic.cpp  bptree_container_ex.cpp  btree_algo.cpp  btree_container.cpp  btree_container_ex.cpp  cache_block.cpp  filesystem_basic.cpp  filesystem_qr.cpp  maxsize_vector.cpp  rbtree_algo.cpp  rbtree_container.cpp  rbtree_container_ex.cpp  std_container_ex.cpp  string_alloc.cpp  test_scale.h
tools/: amalgamate.py  format_cpp_files.sh
